# 4D_NET_pytorch

./: .gitignore  .gitmodules  Benchmark_New.ipynb  KITTI_dataset.py  LICENSE  README.md  Stats.ipynb  calibration_util.py  cluster_kitti_3scales_3anchor.npy  deformable_conv.py  detector_models.py  infer.py  matcher.py  pillar_models.py  pyproject.toml  reader.py  testset_names.npy  train.py  train_KITTI.py  train_KITTI_2gpus.py  train_exp_KITTI.py
anchors/: cluster_kitti_3scales_1anchor.npy  cluster_kitti_3scales_3anchor.npy
dataset/: KITTI_dataset.py  reader.py
docker/: dockerfile
docker/setup_files/: setup_mmcv.py
models/: deformable_conv.py  detector_models.py  pillar_models.py
models/assginer/: matcher.py
models/assigner/: matcher.py
notebooks/: Benchmark_New.ipynb
utils/: box_ops.py  calibration_util.py  common.py  draw_utils.py  point_cloud_ops.py
